# Letnaya_practica2

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.c
cmake/: MyFunctions.cmake
lib/: CMakeLists.txt
lib/include/: hex_core.h
lib/src/: hex_core.c
tests/: CMakeLists.txt  test_main.c  test_main2.c
